# Cookie2025

./: CMakeLists.txt  README.md
Cookie2025/: CMakeLists.txt  Engine.cpp  Engine.h  Global.h  main.cpp
Cookie2025/Core/: CookieGlobals.cpp  CookieGlobals.h  FrameContext.h  Framework.h  HeapAllocator.h  Object.cpp  Object.h  ThreadUtils.cpp  ThreadUtils.h
Cookie2025/Core/Serialize/: Allocator.h  Cereal.h  SerializeBase.h  SerializeTraits.h  SerializeTraitsBase.h  YAMLWrite.cpp  YAMLWrite.h
Cookie2025/Editor/: Editor.cpp  Editor.h
Cookie2025/Editor/EditorUI/: FileExplorerWindow.cpp  FileExplorerWindow.h
Cookie2025/Editor/EditorUI/UIElement/: Widget.h
Cookie2025/Platform/: Platform.cpp  Platform.h
